--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>user-friendly-portfolio-haven</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Portfolio | Paulo L. Abaquita</title>
+    <meta name="description" content="Portfolio of Paulo L. Abaquita – Website Developer who helps business owners solve problems through modern, responsive websites." />
+    <meta name="author" content="Paulo L. Abaquita" />
 
-    <meta property="og:title" content="Lovable Generated Project" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+    <meta property="og:title" content="Paulo L. Abaquita | Website Developer" />
+    <meta property="og:description" content="I build websites that help business owners grow, stand out from the competition, and solve real business problems." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="image/paulo/webquita.jpg" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@pauloabaquita" />
+    <meta name="twitter:title" content="Paulo L. Abaquita | Website Developer" />
+    <meta name="twitter:description" content="Portfolio showcasing websites designed to help business owners grow and succeed online." />
+    <meta name="twitter:image" content="image/paulo/webquita.jpg" />
   </head>
 
   <body>
